Impl [General] Add CSS class for multi-line common table cell

--- a/src/igz_controls/less/table.less
+++ b/src/igz_controls/less/table.less
@@ -20,6 +20,12 @@
         font-size: 14px;
         font-family: @font-family-sans-serif;
         font-weight: 400;
+
+        .description-content {
+            position: relative;
+            white-space: normal;
+            max-height: 40px;
+        }
     }
 
     .common-table-cell {
