Impl [Nuclio] Function template params: order by `order` property
Also:
- Add "more info" icon with contents of `description` in case it is
  non-empty.
- Add red asterisk in case `required` is `true`.
- Limit dialog's height and add vertical scrollbar.
- Skip params whose `kind` is not one of the defined
  available values (currently: `'string'`, `'number'` and `'choice'`).
- `kind` is now case-INsensitive.
- Ignore duplicate params by key. In case there are more than one params
  sharing the same key, then the first one will be used and the others
  will be skipped.
- Bugfix: "Apply" button works although it looks disabled.

--- a/src/nuclio/common/screens/create-function/function-from-template/function-from-template-dialog/function-from-template-dialog.less
+++ b/src/nuclio/common/screens/create-function/function-from-template/function-from-template-dialog/function-from-template-dialog.less
@@ -8,27 +8,33 @@
 
     .main-content {
         width: 300px;
+        max-height: 500px;
 
-        .field-label {
-            font-size: 14px;
-            text-align: left;
-            color: @dusk-three;
-        }
+        form {
+            margin: 0 20px 0 0;
 
-        .validating-input-field {
-            .input-field {
-                padding: 0 10px 0 17px;
-            }
-
-            .input-placeholder {
-                left: 18px;
-                font-style: italic;
+            .field-label {
                 font-size: 14px;
+                text-align: left;
+                color: @dusk-three;
+
+                .igz-icon-help-round::before {
+                    color: @dark-sky-blue;
+                    font-size: 18px;
+                }
+            }
+
+            .validating-input-field {
+                .input-field {
+                    padding: 0 10px 0 17px;
+                }
+
+                .input-placeholder {
+                    left: 18px;
+                    font-style: italic;
+                    font-size: 14px;
+                }
             }
         }
-    }
-
-    .ncl-primary-button {
-        cursor: pointer;
     }
 }
