IG-2066 [Nuclio] Test pane: Pinned mode is broken

--- a/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.less
+++ b/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.less
@@ -101,6 +101,10 @@
                 margin-right: 39px;
             }
         }
+
+        .left-bar-pinned {
+            padding-left: 187px;
+        }
     }
 
     .left-bar {
@@ -205,6 +209,7 @@
 
             .ui-layout-container {
                 overflow: hidden;
+                transition: padding-left 0.2s ease-in-out;
             }
 
             .ui-splitbar {
