added reports icon

--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -601,6 +601,10 @@
     .generateIconClass(a13);
 }
 
+.igz-icon-reports {
+    .generateIconClass(a14);
+}
+
 .igz-icon-priority-realtime, .igz-icon-priority-high, .igz-icon-priority-standard, .igz-icon-priority-low {
     display: inline-block;
     font-size: 17px;
