IG-2075 [General] Hide "Scanned Items" column in production mode (fixed)

--- a/src/igz_controls/less/igz-grid.less
+++ b/src/igz_controls/less/igz-grid.less
@@ -57,6 +57,14 @@
     width: 7.5%;
 }
 
+&.igz-col-8 {
+    width: 8%;
+}
+
+&.igz-col-9 {
+    width: 9%;
+}
+
 &.igz-col-10 {
     width: 10%;
 }
@@ -119,6 +127,10 @@
 
 &.igz-col-25 {
     width: 25%;
+}
+
+&.igz-col-28 {
+    width: 28%;
 }
 
 &.igz-col-30 {
