IG-2073 [General] Apply action icons styles by design

--- a/src/igz_controls/components/action-menu/action-menu.less
+++ b/src/igz_controls/components/action-menu/action-menu.less
@@ -69,7 +69,7 @@
             }
 
             .action-icon {
-                color: @action-icon-hover-color;
+                color: @action-icon-color;
                 display: inline-block;
                 padding-right: 14px;
 
