--- a/src/igz_controls/less/custom-dropdown.less
+++ b/src/igz_controls/less/custom-dropdown.less
@@ -1,5 +1,5 @@
-.igz-browser-sort-dropdown {
-    .sort-dropdown-color-set();
+.igz-custom-dropdown {
+    .custom-dropdown-color-set();
 
     .dropdown-menu {
         left: auto;
