IG-1811 [Nuclio] Drop-down menu visual issue (first draft)

--- a/src/nuclio/common/components/navigation-tabs/navigation-tabs.less
+++ b/src/nuclio/common/components/navigation-tabs/navigation-tabs.less
@@ -1,4 +1,6 @@
 ncl-navigation-tabs {
+    background: #f2f2f6;
+    z-index: 1000;
     display: flex;
     align-items: center;
     justify-content: space-between;
