--- a/src/nuclio/projects/project/functions/version/version.less
+++ b/src/nuclio/projects/project/functions/version/version.less
@@ -5,6 +5,7 @@
     flex-direction: column;
 
     .igz-info-page-actions-bar {
+        z-index: 1000;
         position: relative;
 
         .actions-buttons-block {
