--- a/src/nuclio/common/components/key-value-input/key-value-input.less
+++ b/src/nuclio/common/components/key-value-input/key-value-input.less
@@ -155,6 +155,13 @@
                             background-color: @white;
                             border-radius: 0;
                         }
+
+                        .default-dropdown-container {
+                            position: fixed;
+                            z-index: 100;
+                            width: 249px;
+                            min-width: unset;
+                        }
                     }
                 }
             }
