--- a/src/nuclio/common/components/key-value-input/key-value-input.tpl.html
+++ b/src/nuclio/common/components/key-value-input/key-value-input.tpl.html
@@ -38,9 +38,9 @@
                                       data-values-array="$ctrl.typesList"
                                       data-selected-item="$ctrl.getType()"
                                       data-placeholder="Select type..."
-                                      data-item-select-callback="$ctrl.onTypeChanged(item, isItemChanged)"
-                                      data-on-open-dropdown="$ctrl.openDropdown"
-                                      data-on-close-dropdown="$ctrl.closeDropdown()">
+                                      data-item-select-callback="$ctrl.onTypeChanged(item, isItemChanged)">
+                                      <!--data-on-open-dropdown="$ctrl.openDropdown"-->
+                                      <!--data-on-close-dropdown="$ctrl.closeDropdown()">-->
                 </igz-default-dropdown>
 
             </div>
