Add new `Restart` icon

--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -605,6 +605,10 @@
     .generateIconClass(a14);
 }
 
+.igz-icon-restart {
+    .generateIconClass(a15);
+}
+
 .igz-icon-priority-realtime, .igz-icon-priority-high, .igz-icon-priority-standard, .igz-icon-priority-low {
     display: inline-block;
     font-size: 17px;
