--- a/src/nuclio/common/components/edit-item/edit-item.tpl.html
+++ b/src/nuclio/common/components/edit-item/edit-item.tpl.html
@@ -362,8 +362,11 @@
                         <ncl-key-value-input class="new-label-input"
                                              data-list-class="scrollable-ingresses"
                                              data-change-state-broadcast="change-state-deploy-button"
+                                             data-key-optional="true"
                                              data-row-data="ingress"
                                              data-use-type="false"
+                                             data-use-additional-value="true"
+                                             data-additional-value-optional="true"
                                              data-submit-on-fly="true"
                                              data-item-index="$index"
                                              data-action-handler-callback="$ctrl.handleIngressAction(actionType, index)"
