--- a/src/nuclio/common/components/key-value-input/key-value-input.less
+++ b/src/nuclio/common/components/key-value-input/key-value-input.less
@@ -155,6 +155,10 @@
                             background-color: @white;
                             border-radius: 0;
                         }
+
+                        .default-dropdown-container {
+                            z-index: 100;
+                        }
                     }
                 }
             }
