--- a/src/nuclio/common/components/key-value-input/key-value-input.tpl.html
+++ b/src/nuclio/common/components/key-value-input/key-value-input.tpl.html
@@ -39,8 +39,7 @@
                                       data-selected-item="$ctrl.getType()"
                                       data-placeholder="Select type..."
                                       data-item-select-callback="$ctrl.onTypeChanged(item, isItemChanged)"
-                                      data-on-open-dropdown="$ctrl.openDropdown"
-                                      data-on-close-dropdown="$ctrl.closeDropdown()">
+                                      data-enable-overlap="$ctrl.dropdownOverlap">
                 </igz-default-dropdown>
 
             </div>
