--- a/src/nuclio/projects/project/functions/version/version-code/function-event-pane/test-events-navigation-tabs/test-events-navigation-tabs.less
+++ b/src/nuclio/projects/project/functions/version/version-code/function-event-pane/test-events-navigation-tabs/test-events-navigation-tabs.less
@@ -56,5 +56,9 @@
         .default-dropdown-field:not(:hover) {
             border-color: transparent;
         }
+
+        .default-dropdown-container {
+            z-index: 2;
+        }
     }
 }
