--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-logging/version-configuration-logging.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-logging/version-configuration-logging.less
@@ -1,23 +1,42 @@
 .ncl-version-configuration-logging {
     .row {
         display: flex;
-        justify-content: space-between;
-        margin-top: 3px;
+        position: relative;
 
-        > div {
-            flex: 1;
+        .logging-wrapper {
+            width: 100%;
 
-            &:not(:last-child) {
-                margin-right: 16px;
-            }
+            .inputs-container {
+                display: flex;
+                margin-top: 3px;
 
-            .label {
-                padding: 0;
-                margin-bottom: 5px;
-            }
+                .logger-dropdown {
+                    .default-dropdown {
+                        position: relative;
+                        height: 36px;
 
-            &.logger-input {
-                flex-grow: 1.8;
+                        .dropdown-overlap {
+                            z-index: 100;
+                        }
+                    }
+                }
+
+                > div {
+                    flex: 1;
+
+                    &:not(:last-child) {
+                        margin-right: 16px;
+                    }
+
+                    .label {
+                        padding: 0;
+                        margin-bottom: 5px;
+                    }
+
+                    &.logger-input {
+                        flex-grow: 1.8;
+                    }
+                }
             }
         }
     }
