IG-2097 [Services][Nuclio] Apply new action icon style

--- a/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.less
+++ b/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.less
@@ -584,38 +584,12 @@
             .code-section {
                 width: 100%;
 
-                .top-panel {
+                .actions-list {
                     display: flex;
                     justify-content: flex-end;
                     align-items: center;
                     height: 54px;
                     margin-right: 18px;
-
-                    > div {
-                        .duskThree(0.64);
-                        height: 40px;
-                        width: 40px;
-                        border-radius: 50%;
-                        color: @color;
-                        margin-right: 6px;
-
-                        .igz-icon-download {
-                            font-size: 17px;
-                            margin: 10px 12px;
-                        }
-
-                        .ncl-icon-copy {
-                            font-size: 20px;
-                            margin: 7px 11px;
-                        }
-
-                        &:hover {
-                            .black(0.13);
-                            background-color: @pale-grey;
-                            box-shadow: 0.8px 0.5px 3px 0 @color;
-                            color: @dusk-three;
-                        }
-                    }
                 }
 
                 .code-edit-section {
