Fix IG-1811 [Nuclio] Drop-down menu visual issue (#443)

--- a/src/nuclio/common/components/key-value-input/key-value-input.less
+++ b/src/nuclio/common/components/key-value-input/key-value-input.less
@@ -175,6 +175,10 @@
                             background-color: @white;
                             border-radius: 0;
                         }
+
+                        .default-dropdown-container {
+                            z-index: 100;
+                        }
                     }
                 }
             }
