--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.less
@@ -73,8 +73,12 @@
         .slider-block {
             padding-top: 0;
 
+            .target-cpu-title {
+                margin-bottom: 0;
+            }
+
             .slider-row {
-                width: 74.4%;
+                width: 74%;
             }
         }
     }
