IG-2112 [Services] Disable "Refresh" while applying changes

--- a/src/igz_controls/components/action-item/action-item-refresh/action-item-refresh.tpl.html
+++ b/src/igz_controls/components/action-item/action-item-refresh/action-item-refresh.tpl.html
@@ -1,4 +1,5 @@
 <div class="igz-action-item"
+     data-ng-class="{'inactive': $ctrl.isDisabled}"
      data-uib-tooltip="Refresh"
      data-tooltip-append-to-body="true"
      data-tooltip-placement="bottom"
