--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -49,10 +49,14 @@
     .generateIconClass(905);
 }
 
-.igz-icon-help-round {
+.igz-icon-help {
     .generateIconClass(906);
 }
 
+.igz-icon-help-round {
+    .generateIconClass(a16);
+    font-size: 16px;
+}
 
 // header
 .igz-icon-search {
